--- a/monitoring/grafana-gateway.yaml
+++ b/monitoring/grafana-gateway.yaml
@@ -1,15 +1,15 @@
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: grafana-gateway
+  name: prometheus-gateway
   namespace: monitoring
 spec:
   selector:
     istio: ingressgateway
   servers:
     - port:
-        number: 3000
+        number: 80
         name: http
         protocol: HTTP
       hosts:
-        - "*"
+        - "prometheus.local"
