--- a/manifests/rabbitmq/rabbitmq-virtualservice.yaml
+++ b/manifests/rabbitmq/rabbitmq-virtualservice.yaml
@@ -7,13 +7,11 @@ spec:
   hosts:
     - "*"
   gateways:
-    - rabbitmq-gateway
+    - main-gateway
   http:
     - match:
         - uri:
             prefix: /rabbitmq
-      rewrite:
-        uri: /
       route:
         - destination:
             host: rabbitmq.rabbitmq.svc.cluster.local
