--- a/manifests/messaging/consumer-deployment.yaml
+++ b/manifests/messaging/consumer-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: consumer
-  namespace: messaging
+  namespace: consumer
 spec:
   replicas: 1
   selector:
@@ -16,11 +16,12 @@ spec:
       containers:
         - name: consumer
           image: consumer:latest
-          imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 5001
+            - containerPort: 80
           env:
-            - name: RABBITMQ_HOST
-              value: rabbitmq.messaging.svc.cluster.local
-            - name: RABBITMQ_QUEUE
-              value: default_queue
+            - name: RABBITMQ_USERNAME
+              value:
+                username: user
+            - name: RABBITMQ_PASSWORD
+              value:
+                password: bitnami
