--- a/manifests/messaging/producer-virtualservice.yaml
+++ b/manifests/messaging/producer-virtualservice.yaml
@@ -7,7 +7,7 @@ spec:
   hosts:
     - "*"
   gateways:
-    - producer-gateway
+    - isitio-system/main-gateway
   http:
     - match:
         - uri:
