--- a/manifests/messaging/consumer-virtualservice.yaml
+++ b/manifests/messaging/consumer-virtualservice.yaml
@@ -7,7 +7,7 @@ spec:
   hosts:
     - "*"
   gateways:
-    - consumer-gateway
+    - istio-system/main-gateway
   http:
     - match:
         - uri:
