--- a/manifests/messaging/producer-deployment.yaml
+++ b/manifests/messaging/producer-deployment.yaml
@@ -24,3 +24,7 @@ spec:
               value: user
             - name: RABBITMQ_PASSWORD
               value: bitnami
+            - name: RABBITMQ_HOST
+              value: rabbitmq.messaging.svc.cluster.local
+            - name: RABBITMQ_PORT
+              value: "5672"
