--- a/manifests/messaging/consumer-deployment.yaml
+++ b/manifests/messaging/consumer-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: consumer
-  namespace: consumer
+  namespace: messaging
 spec:
   replicas: 1
   selector:
