--- a/setup/kind-cluster.yaml
+++ b/setup/kind-cluster.yaml
@@ -5,7 +5,9 @@ name: test
 nodes:
   - role: control-plane
     extraPortMappings:
-      - containerPort: 80
-        hostPort: 3180
-        listenAddress: "0.0.0.0"
+      - containerPort: 31380
+        hostPort: 31380
+        protocol: TCP
+      - containerPort: 30080  # <-- HTTP (Istio Gateway)
+        hostPort: 30080
         protocol: TCP
