--- a/manifests/istio/istio-gateway.yaml
+++ b/manifests/istio/istio-gateway.yaml
@@ -1,23 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: istio-ingressgateway
+  name: main-gateway
   namespace: istio-system
 spec:
   type: NodePort
   selector:
     istio: ingressgateway
   ports:
-    - name: http2
-      port: 80
-      targetPort: 80
-      nodePort: 30080
-    - name: https
-      port: 443
-      targetPort: 443
-      nodePort: 30443
     - name: rabbitmq-ui
       port: 15672
       targetPort: 15672
       protocol: TCP
-      nodePort: 31380
+      nodePort: 80
+    - name: rabbitmq-tcp
+      port: 5672
+      targetPort: 5672
+      protocol: TCP
+      nodePort: 5672
