--- a/manifests/telemetry/telemtry-config.yaml
+++ b/manifests/telemetry/telemtry-config.yaml
@@ -1,13 +1,19 @@
-apiVersion: v1
-kind: ServiceAccount
+apiVersion: networking.istio.io/v1beta1
+kind: VirtualService
 metadata:
-  name: telemetry
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: telemetry-config
-data:
-  config.yaml: |
-
-    # telemetry config contents
+  name: prometheus-virtualservice
+  namespace: monitoring # Or the namespace where Prometheus is installed
+spec:
+  hosts:
+    - "prometheus.example.com" # Replace with your desired hostname
+  gateways:
+    - istio-system/main-gateway # Reference your main gateway
+  http:
+    - match:
+        - uri:
+            prefix: / # Match all traffic for this host
+      route:
+        - destination:
+            host: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local # Replace with the FQDN of your Prometheus service
+            port:
+              number: 9090 # The port Prometheus UI is listening on (default: 9090)
