--- a/manifests/istio/kiali.yaml
+++ b/manifests/istio/kiali.yaml
@@ -2,7 +2,7 @@ apiVersion: kiali.io/v1alpha1
 kind: Kiali
 metadata:
   name: kiali
-  namespace: kiali-operator
+  namespace: istio-system
 spec:
   auth:
     strategy: anonymous
